# pokemon-pack-simulator

./: .gitignore  CHANGE-02-External-Sets-Folder.md  CHANGE-07-Data-Accuracy.md  CHANGE-08-JSON-Implementation.md  CHANGE-09-JSON-Script-Creation.md  DAY-04-PRE-DEV-REPORT.txt  PM-Updates.txt  index.html  metadata.json  pack-simulation-report.txt  package-lock.json  package.json  simulate-1000-packs.mjs  simulate-packs.mjs  simulation_1000_packs.csv  simulation_summary_1000_packs.csv  vite.config.ts
data/raw/: base-set.txt  evolving-skies.txt  fossil.txt  jungle.txt
data/sets/: base-set.json  evolving-skies.json  fossil.json  sets-manifest.json
misc/: SET_JSON_WORKFLOW.md  TO-DO-LIST.md  sets-to-add  v1.02-full-report
scripts/: generate-set-json.mjs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CollectionTable.tsx  PackOpener.tsx  PackResults.tsx  PreviewModal.tsx  ProfileManager.tsx  SetLoader.tsx  SetSearchModal.tsx  SetSelector.tsx  SetUploader.tsx
src/hooks/: usePDFUpload.ts  useSetManager.ts
src/utils/: jsonSetLoader.ts  packSimulator.ts  pdfParser.ts  pokemonAPI.ts
